<resources>
    <string name="settings">Settings</string>
    <string name="logo">logo</string>
    <string name="app_name">Forager\'s Friend</string>
    <string name="nav_home">Home</string>
    <string name="nav_add_mushroom">Add Mushroom</string>
    <string name="nav_mushroom_list">Mushroom List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mushroom_list_fragment">Mushroom List Fragment</string>
    <string name="mushroom_add_fragment">Mushroom Add Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="name">Enter Name</string>
    <string name="date">Enter a date</string>
    <string name="location">Location</string>
    <string name="season">Season</string>
    <string name="add_mushroom_form">Add Mushroom Form</string>
    <string name="toxicity">Toxicity</string>
    <string name="type">Type</string>
    <string name="add_mushroom">Add Mushroom</string>
    <string name="mushroom_detail_name_header">Mushroom Name:</string>
    <string name="mushroom_detail_description_header">Mushroom Description:</string>
    <string name="mushroom_detail_last_seen_header">Last Seen:</string>
    <string name="mushroom_detail_season_header">Season:</string>
    <string name="mushroom_detail_toxicity_header">Toxicity:</string>
    <string name="mushroom_detail_type_header">Type:</string>
    <string name="image_preview">Image Preview:\n</string>
    <string name="add_image">Add Image</string>
    <string name="description">Enter Description</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="mushroom">mushroom</string>
    <string name="mushroom_name">Mushroom Name</string>
    <string name="last_seen_location">Last Seen: Location</string>
    <string name="details">Details</string>
</resources>