<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_mushroom_form"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center" />


        <EditText
            android:id="@+id/mushroom_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"
            android:autofillHints="Name" />

        <EditText
            android:id="@+id/mushroom_location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/location"
            android:autofillHints="Location" />

        <EditText
            android:id="@+id/mushroom_date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/date"
            android:autofillHints="Date" />

        <EditText
            android:id="@+id/mushroom_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/description"
            android:autofillHints="Description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:layout_gravity="center_vertical"
                android:paddingRight="8dp" />

            <RadioGroup
                android:id="@+id/radio_group_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_spring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spring" />

                <RadioButton
                    android:id="@+id/radio_summer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summer" />

                <RadioButton
                    android:id="@+id/radio_fall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fall" />

                <RadioButton
                    android:id="@+id/radio_winter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/winter" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toxicity"/>

            <CheckBox
                android:id="@+id/toxicity_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:checked="false"/>

        </LinearLayout>

        <EditText
            android:id="@+id/mushroom_type_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/type"
            android:autofillHints="Type" />

        <Button
            android:id="@+id/add_mushroom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_mushroom" />


        <Button
            android:id="@+id/btnCapture"
            android:text="CAPTURE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextureView
            android:id="@+id/textureView"
            android:layout_width="300dp"
            android:layout_height="300dp" />

    </LinearLayout>

</ScrollView>
