<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/mushroom_detail_imageview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/mushroom" />

    <TextView
        android:id="@+id/mushroom_detail_name_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mushroom_detail_name_header"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_imageview" />

    <TextView
        android:id="@+id/mushroom_detail_description_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mushroom_detail_description_header"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_name_header_textview" />

    <TextView
        android:id="@+id/mushroom_detail_last_seen_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mushroom_detail_last_seen_header"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_description_header_textview" />

    <TextView
        android:id="@+id/mushroom_detail_location_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="Location"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_last_seen_header_textview"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/mushroom_detail_season_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mushroom_detail_season_header"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_location_header_textview" />

    <TextView
        android:id="@+id/mushroom_detail_toxicity_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mushroom_detail_toxicity_header"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_season_header_textview" />

    <TextView
        android:id="@+id/mushroom_detail_type_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mushroom_detail_type_header"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_toxicity_header_textview" />

    <TextView
        android:id="@+id/mushroom_detail_name_actual_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mushroom_detail_name_header_textview"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_imageview"
        android:layout_margin="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mushroom_detail_description_header_textview"
        app:layout_constraintTop_toBottomOf="@id/mushroom_detail_name_actual_textview"
        android:layout_margin="20dp"
        android:id="@+id/mushroom_detail_description_actual_textview"/>

    <TextView
        android:id="@+id/mushroom_detail_last_seen_actual_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mushroom_detail_last_seen_header_textview"
        app:layout_constraintTop_toBottomOf="@id/mushroom_detail_description_header_textview"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/mushroom_detail_location_actual_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mushroom_detail_location_header_textview"
        app:layout_constraintTop_toBottomOf="@id/mushroom_detail_last_seen_header_textview"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/mushroom_detail_season_actual_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mushroom_detail_season_header_textview"
        app:layout_constraintTop_toBottomOf="@id/mushroom_detail_location_header_textview"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/mushroom_detail_toxicity_actual_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mushroom_detail_toxicity_header_textview"
        app:layout_constraintTop_toBottomOf="@id/mushroom_detail_season_header_textview"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/mushroom_detail_type_actual_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mushroom_detail_type_header_textview"
        app:layout_constraintTop_toBottomOf="@id/mushroom_detail_toxicity_header_textview"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/mushroom_detail_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_type_actual_textview"
        android:layout_margin="40dp"
        android:onClick="deleteMushroom" />

    <Button
        android:id="@+id/mushroom_detail_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroom_detail_delete_button"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:onClick="goBack" />





</androidx.constraintlayout.widget.ConstraintLayout>